feat: refactor layout and forms for improved structure and styling; add new directives for form submission and text styling

--- a/src/app/__layout/layout.html
+++ b/src/app/__layout/layout.html
@@ -66,11 +66,11 @@
             <!-- 菜单选项 -->
             <div class="user-panel-menu">
               <a [routerLink]="['/account']" class="menu-item">
-                <span nz-icon nzType="lock" nzTheme="outline"></span>
+                <nz-icon nzType="lock" />
                 修改密码
               </a>
               <a class="menu-item menu-item-danger">
-                <span nz-icon nzType="logout" nzTheme="outline"></span>
+                <nz-icon nzType="logout" />
                 退出登录
               </a>
             </div>
