--- a/src/app/__layout/layout.less
+++ b/src/app/__layout/layout.less
@@ -4,13 +4,14 @@ nz-header {
   height: @header-height;
   padding: 0 16px;
   background: #fff;
-  border-bottom: 1px solid #f0f0f0;
+  border-bottom: 1px solid #dedede;
 
   .header-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 100%;
+    margin-top: -1px;
   }
 }
 
