feat: refactor icon components to self-closing tags for improved readability

--- a/src/app/__layout/layout.html
+++ b/src/app/__layout/layout.html
@@ -4,31 +4,31 @@
       <ul class="navigation" nz-menu nzMode="horizontal">
         <li nz-menu-item nzMatchRouter>
           <a [routerLink]="['/dashboard']">
-            <nz-icon nzType="dashboard"></nz-icon>
+            <nz-icon nzType="dashboard" />
             工作台
           </a>
         </li>
         <li nz-menu-item nzMatchRouter>
           <a [routerLink]="['/products']">
-            <nz-icon nzType="shopping"></nz-icon>
+            <nz-icon nzType="shopping" />
             商品管理
           </a>
         </li>
         <li nz-menu-item nzMatchRouter>
           <a [routerLink]="['/orders']">
-            <nz-icon nzType="file-text"></nz-icon>
+            <nz-icon nzType="file-text" />
             订单管理
           </a>
         </li>
         <li nz-menu-item nzMatchRouter>
           <a [routerLink]="['/customers']">
-            <nz-icon nzType="team"></nz-icon>
+            <nz-icon nzType="team" />
             客户管理
           </a>
         </li>
         <li nz-menu-item nzMatchRouter>
           <a [routerLink]="['/settings']">
-            <nz-icon nzType="setting"></nz-icon>
+            <nz-icon nzType="setting" />
             系统设置
           </a>
         </li>
@@ -49,7 +49,7 @@
             <!-- 用户信息头部 -->
             <div class="user-panel-header">
               <nz-avatar nzSize="large" class="user-panel-avatar">
-                <span nz-icon nzType="user" nzTheme="outline"></span>
+                <nz-icon nzType="user" />
               </nz-avatar>
               <div class="user-panel-info">
                 <div class="user-panel-name">Kain</div>
