--- a/src/app/settings/settings.html
+++ b/src/app/settings/settings.html
@@ -6,19 +6,19 @@
           <ul>
             <li nz-menu-item nzMatchRouter>
               <a routerLink="orgs">
-                <nz-icon nzType="apartment"></nz-icon>
+                <nz-icon nzType="apartment" />
                 <span>组织</span>
               </a>
             </li>
             <li nz-menu-item nzMatchRouter>
               <a routerLink="roles">
-                <nz-icon nzType="partition"></nz-icon>
+                <nz-icon nzType="partition" />
                 <span>权限组</span>
               </a>
             </li>
             <li nz-menu-item nzMatchRouter>
               <a routerLink="users">
-                <nz-icon nzType="user"></nz-icon>
+                <nz-icon nzType="user" />
                 <span>企业成员</span>
               </a>
             </li>
@@ -28,19 +28,19 @@
           <ul>
             <li nz-menu-item nzMatchRouter>
               <a routerLink="resources">
-                <nz-icon nzType="api"></nz-icon>
+                <nz-icon nzType="api" />
                 <span>资源控制</span>
               </a>
             </li>
             <li nz-menu-item nzMatchRouter>
               <a routerLink="routes">
-                <nz-icon nzType="layout"></nz-icon>
+                <nz-icon nzType="layout" />
                 <span>视图控制</span>
               </a>
             </li>
             <li nz-menu-item nzMatchRouter>
               <a routerLink="permissions">
-                <nz-icon nzType="switcher"></nz-icon>
+                <nz-icon nzType="switcher" />
                 <span>策略组</span>
               </a>
             </li>
@@ -50,19 +50,19 @@
           <ul>
             <li nz-menu-item nzMatchRouter>
               <a routerLink="sessions">
-                <nz-icon nzType="rocket"></nz-icon>
+                <nz-icon nzType="rocket" />
                 <span>在线会话</span>
               </a>
             </li>
             <li nz-menu-item nzMatchRouter>
               <a routerLink="login-status">
-                <nz-icon nzType="audit"></nz-icon>
+                <nz-icon nzType="audit" />
                 <span>登录状态</span>
               </a>
             </li>
             <li nz-menu-item nzMatchRouter>
               <a routerLink="behaviors">
-                <nz-icon nzType="file-search"></nz-icon>
+                <nz-icon nzType="file-search" />
                 <span>操作行为</span>
               </a>
             </li>
