--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,5 +1,7 @@
 <div class="login-container">
-  <div class="login-brand"></div>
+  <div class="login-brand">
+    <img src="/home-font.png" alt="Litho System" class="brand-logo" />
+  </div>
 
   <section class="login-section">
     <header class="login-header">
@@ -8,11 +10,11 @@
     </header>
 
     <nz-segmented
+      style="margin-bottom: 1rem"
       [nzOptions]="options"
       [ngModel]="mode()"
       (ngModelChange)="mode.set($event)"
       nzBlock
-      class="login-tabs"
     />
 
     @switch (mode()) {
@@ -26,11 +28,10 @@
 
     <footer class="login-footer">
       <nz-divider nzText="其他登录方式" />
-      <nz-space nzAlign="center">
-        <button *nzSpaceItem nz-button nzType="text" nz-tooltip nzTooltipTitle="通行密钥">
-          <nz-icon nzType="key" />
-        </button>
-      </nz-space>
+      <nz-flex>
+        <button nz-button nzType="text" nzBlock> <nz-icon nzType="google" /> Google </button>
+        <button nz-button nzType="text" nzBlock> <nz-icon nzType="key" /> PassKey </button>
+      </nz-flex>
     </footer>
 
     <small class="copyright">
