feat: add logo image and style adjustments for login page

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,5 +1,6 @@
 <div class="login-container">
   <div class="login-brand">
+    <img src="/logo.png" alt="Logo" class="login-logo" />
     <img src="/home-font.png" alt="Litho System" class="brand-logo" />
   </div>
 
