--- a/src/app/login/basic/basic.html
+++ b/src/app/login/basic/basic.html
@@ -1,16 +1,14 @@
 <form nz-form nzLayout="vertical" [formGroup]="form" (appSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired>邮箱地址</nz-form-label>
-    <nz-form-control nzErrorTip="请输入有效的电子邮箱地址">
-      <input type="email" nz-input formControlName="email" placeholder="name@company.com" autocomplete="email" />
+    <nz-form-control>
+      <input type="email" nz-input formControlName="email" placeholder="电子邮件 / 手机号" autocomplete="email" />
     </nz-form-control>
   </nz-form-item>
 
   <nz-form-item>
-    <nz-form-label nzRequired>密码</nz-form-label>
-    <nz-form-control nzErrorTip="请输入您的密码">
+    <nz-form-control>
       <nz-input-password>
-        <input nz-input formControlName="password" autocomplete="current-password" placeholder="请输入密码" />
+        <input nz-input formControlName="password" autocomplete="current-password" placeholder="密码" />
       </nz-input-password>
     </nz-form-control>
   </nz-form-item>
