--- a/src/app/login/sms/sms.html
+++ b/src/app/login/sms/sms.html
@@ -1,17 +1,15 @@
 <form nz-form nzLayout="vertical" [formGroup]="form" (appSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired>手机号码</nz-form-label>
-    <nz-form-control nzErrorTip="请输入有效的手机号码">
-      <input type="email" nz-input formControlName="phone" placeholder="+86" autocomplete="email" />
+    <nz-form-control>
+      <input type="email" nz-input formControlName="phone" placeholder="手机号" autocomplete="email" />
     </nz-form-control>
   </nz-form-item>
 
   <nz-form-item>
-    <nz-form-label nzRequired>验证码</nz-form-label>
-    <nz-form-control nzErrorTip="请输入验证码">
+    <nz-form-control>
       <nz-space>
-        <nz-input-otp *nzSpaceItem [nzFormatter]="formatter"></nz-input-otp>
-        <a *nzSpaceItem nz-button nzType="link">获取</a>
+        <nz-input-otp *nzSpaceItem [nzFormatter]="formatter" [nzLength]="4" disabled></nz-input-otp>
+        <a *nzSpaceItem nz-button nzType="link">获取验证码</a>
       </nz-space>
     </nz-form-control>
   </nz-form-item>
