feat: update login success messages and improve styling for basic login form

--- a/src/app/login/basic/basic.html
+++ b/src/app/login/basic/basic.html
@@ -1,7 +1,7 @@
 <form nz-form nzLayout="vertical" [formGroup]="form" (appSubmit)="submit($event)">
   <nz-form-item>
     <nz-form-control>
-      <input type="email" nz-input formControlName="email" placeholder="电子邮件 / 手机号" autocomplete="email" />
+      <input type="email" nz-input formControlName="email" placeholder="电子邮件" autocomplete="email" />
     </nz-form-control>
   </nz-form-item>
 
