--- a/src/app/login/login.less
+++ b/src/app/login/login.less
@@ -11,6 +11,7 @@
   position: relative;
   overflow: hidden;
   background: url('/home-bg.jpg') #fafafa;
+  background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -58,8 +59,7 @@
   background: #fff;
   display: flex;
   flex-direction: column;
-  padding: 60px;
-  padding-bottom: 120px;
+  padding: 60px 60px 120px;
   box-shadow: -8px 0 24px rgba(0, 0, 0, 0.06);
   position: relative;
   justify-content: center;
@@ -85,7 +85,6 @@
 }
 
 .login-footer {
-  margin-top: 24px;
 
   nz-divider {
     margin: 24px 0;
