feat: implement logout functionality and improve login error handling

--- a/src/app/__layout/layout.html
+++ b/src/app/__layout/layout.html
@@ -69,7 +69,7 @@
                 <nz-icon nzType="lock" />
                 修改密码
               </a>
-              <a class="menu-item menu-item-danger">
+              <a class="menu-item menu-item-danger" (click)="logout()">
                 <nz-icon nzType="logout" />
                 退出登录
               </a>
