--- a/src/app/settings/general/orgs/orgs.html
+++ b/src/app/settings/general/orgs/orgs.html
@@ -1,18 +1,46 @@
 <ng-template #left>
-  <nz-input-search style="width: 200px">
-    <input nz-input placeholder="搜索" />
-  </nz-input-search>
-  <!--  <app-toolbox></app-toolbox>-->
+  <nz-space nzAlign="center">
+    <nz-input-search *nzSpaceItem style="width: 200px">
+      <input nz-input placeholder="搜索" />
+    </nz-input-search>
+    <app-toolbox *nzSpaceItem [appModel]="m"></app-toolbox>
+  </nz-space>
 </ng-template>
 
 <ng-template #right>
-  <nz-space>
+  <nz-space nzAlign="center">
+    <a nz-dropdown *nzSpaceItem [nzDropdownMenu]="bulkAction" [nzDisabled]="m.selection().size === 0">
+      已选择 {{ m.selection().size }} 个项目
+      <nz-icon nzType="down" />
+    </a>
+    <nz-dropdown-menu #bulkAction>
+      <ul nz-menu nzSelectable>
+        <li nz-menu-item nzDanger (click)="bulkDelete()">删除</li>
+        <li nz-menu-item (click)="m.clearSelections()">取消选择</li>
+      </ul>
+    </nz-dropdown-menu>
     <button *nzSpaceItem nz-button nzType="primary" (click)="open()">新增</button>
   </nz-space>
 </ng-template>
 
-<app-box [appLeft]="left" [appRight]="right">
-  <nz-table #basicTable [nzData]="m.data()">
+<app-box #box [appLeft]="left" [appRight]="right">
+  <nz-table
+    #tb
+    [style.height.%]="100"
+    [nzLoading]="m.loading()"
+    [nzData]="m.data()"
+    [nzTotal]="m.total()"
+    [nzShowTotal]="box.totalRef()"
+    [nzFrontPagination]="false"
+    [nzShowPagination]="true"
+    [nzShowSizeChanger]="true"
+    [nzPageSizeOptions]="[10, 20, 50]"
+    [(nzPageIndex)]="m.page"
+    [(nzPageSize)]="m.pagesize"
+    (nzPageIndexChange)="getData()"
+    (nzPageSizeChange)="getData()"
+    [nzScroll]="box.scroll()"
+  >
     <thead>
       <tr>
         <th
@@ -23,7 +51,10 @@
           [nzIndeterminate]="m.indeterminate()"
           (nzCheckedChange)="m.setCurrentSelections($event)"
         ></th>
-        <th><b>组织名称</b></th>
+        <th><app-title>组织名称</app-title></th>
+        <th nzRight="50px" nzAlign="center" nzWidth="100px">
+          <app-title>状态</app-title>
+        </th>
         <th nzRight nzAlign="center" nzWidth="50px">
           <button nz-button nzType="text" nz-tooltip="操作">
             <nz-icon nzType="setting" />
@@ -32,7 +63,7 @@
       </tr>
     </thead>
     <tbody>
-      @for (data of basicTable.data; track data) {
+      @for (data of tb.data; track data) {
         <tr>
           <td
             nzLeft
@@ -41,6 +72,9 @@
             (nzCheckedChange)="$event ? m.setSelection(data) : m.removeSelection(data.id)"
           ></td>
           <td>{{ data.name }}</td>
+          <td nzRight nzAlign="center">
+            <app-active [appValue]="data.active"></app-active>
+          </td>
           <td nzRight nzAlign="center">
             <button nz-button nzType="text" nz-dropdown [nzDropdownMenu]="actions">
               <nz-icon nzType="ellipsis" nzTheme="outline"></nz-icon>
