--- a/src/app/settings/general/orgs/orgs.html
+++ b/src/app/settings/general/orgs/orgs.html
@@ -1,9 +1,7 @@
 <ng-template #left>
   <nz-space nzAlign="center">
-    <nz-input-search *nzSpaceItem style="width: 200px">
-      <input nz-input placeholder="搜索" />
-    </nz-input-search>
-    <app-toolbox *nzSpaceItem [appModel]="m"></app-toolbox>
+    <app-keyword *nzSpaceItem [appModel]="m" (appOnSearch)="getData(true)"></app-keyword>
+    <app-toolbox *nzSpaceItem [appModel]="m" (appRefresh)="getData(true)" (appClear)="getData(true)"></app-toolbox>
   </nz-space>
 </ng-template>
 
