--- a/src/app/settings/settings.html
+++ b/src/app/settings/settings.html
@@ -70,7 +70,7 @@
         </li>
       </ul>
     </nz-sider>
-    <nz-content style="padding: 8px; overflow: hidden auto">
+    <nz-content style="padding: 8px; overflow: hidden auto; background: #f0f2f5">
       <router-outlet />
     </nz-content>
   </nz-layout>
