feat: 优化布局和样式，调整内容溢出处理，增强搜索条件管理

--- a/src/app/__layout/layout.html
+++ b/src/app/__layout/layout.html
@@ -79,8 +79,7 @@
       </div>
     </div>
   </nz-header>
-
-  <nz-content style="overflow: hidden auto">
+  <nz-content>
     <ng-content></ng-content>
   </nz-content>
 </nz-layout>
