feat: 更新操作管理功能，调整表单和提示信息，优化资源展示

--- a/src/app/settings/access/resources/actions/form/form.html
+++ b/src/app/settings/access/resources/actions/form/form.html
@@ -1,12 +1,12 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (appSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired>资源名称</nz-form-label>
+    <nz-form-label nzRequired>操作名称</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.name">
       <input nz-input formControlName="name" placeholder="请输入资源名称" />
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired>资源代码</nz-form-label>
+    <nz-form-label nzRequired>操作路径</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.code">
       <input nz-input formControlName="code" placeholder="请输入资源代码" />
     </nz-form-control>
