--- a/src/app/settings/general/roles/roles.html
+++ b/src/app/settings/general/roles/roles.html
@@ -48,7 +48,7 @@
           [nzIndeterminate]="m.indeterminate()"
           (nzCheckedChange)="m.setCurrentSelections($event)"
         ></th>
-        <th><app-title>角色名称</app-title></th>
+        <th><app-title>权限组名称</app-title></th>
         <th><app-title>描述</app-title></th>
         <th nzRight="50px" nzAlign="center" nzWidth="100px">
           <app-title>状态</app-title>
