--- a/src/app/settings/access/resources/resources.html
+++ b/src/app/settings/access/resources/resources.html
@@ -1,14 +1,28 @@
 <div style="height: 100%; background: #fff; display: flex; flex-direction: row; border: 1px solid #e8e8e8">
   <div style="width: 50%; overflow-y: auto; border-right: 1px solid #e8e8e8">
-    <ng-template #search>
+    <ng-template #left>
       <nz-space nzAlign="center">
-        <!--        <nz-checkbox-group *nzSpaceItem> </nz-checkbox-group>-->
         <app-keyword *nzSpaceItem [appModel]="m" (appOnSearch)="getData(true)"></app-keyword>
+        <app-toolbox *nzSpaceItem [appModel]="m" (appRefresh)="getData(true)" (appClear)="getData(true)"></app-toolbox>
+      </nz-space>
+    </ng-template>
+    <ng-template #right>
+      <nz-space nzAlign="center">
+        <a nz-dropdown *nzSpaceItem [nzDropdownMenu]="bulkAction" [nzDisabled]="m.selection().size === 0">
+          已选择 {{ m.selection().size }} 个项目
+          <nz-icon nzType="down" />
+        </a>
+        <nz-dropdown-menu #bulkAction>
+          <ul nz-menu nzSelectable>
+            <li nz-menu-item nzDanger (click)="bulkDelete()">删除</li>
+            <li nz-menu-item (click)="m.clearSelections()">取消选择</li>
+          </ul>
+        </nz-dropdown-menu>
         <button *nzSpaceItem nz-button nzType="primary" (click)="open()">新增资源</button>
       </nz-space>
     </ng-template>
 
-    <nz-card style="height: 100%" [nzBordered]="false" [nzTitle]="search">
+    <nz-card style="height: 100%" [nzBordered]="false" [nzTitle]="left" [nzExtra]="right">
       <nz-table
         #resourceTb
         [style.height.%]="100"
@@ -55,14 +69,16 @@
                 [nzChecked]="m.selection().has(data.id)"
                 (nzCheckedChange)="$event ? m.setSelection(data) : m.removeSelection(data.id)"
               ></td>
-              <td>{{ data.name }}</td>
+              <td>
+                <a [routerLink]="['/settings', 'resources', data.id]">{{ data.name }}</a>
+              </td>
               <td>{{ data.code }}</td>
               <td nzAlign="center">
                 <app-active [appValue]="data.active"></app-active>
               </td>
               <td nzRight nzAlign="center">
                 <button nz-button nzType="text" nz-dropdown [nzDropdownMenu]="actions">
-                  <nz-icon nzType="ellipsis" nzTheme="outline"></nz-icon>
+                  <nz-icon nzType="ellipsis"></nz-icon>
                 </button>
                 <nz-dropdown-menu #actions>
                   <ul nz-menu>
@@ -80,86 +96,6 @@
   </div>
 
   <div style="flex: 1; overflow: auto">
-    <ng-template #left>
-      <nz-space nzAlign="center">
-        <!--        <nz-checkbox-group *nzSpaceItem> </nz-checkbox-group>-->
-        <app-keyword *nzSpaceItem [appModel]="m" (appOnSearch)="getData(true)"></app-keyword>
-      </nz-space>
-    </ng-template>
-    <ng-template #right>
-      <nz-space nzAlign="center">
-        <button *nzSpaceItem nz-button nzType="primary" (click)="open()">新增</button>
-      </nz-space>
-    </ng-template>
-
-    <nz-card style="height: 100%" [nzBordered]="false" [nzTitle]="left" [nzExtra]="right">
-      <nz-table
-        #actionTb
-        [style.height.%]="100"
-        [nzLoading]="m.loading()"
-        [nzData]="m.data()"
-        [nzTotal]="m.total()"
-        [nzFrontPagination]="false"
-        [nzShowPagination]="true"
-        [nzShowSizeChanger]="true"
-        [nzPageSizeOptions]="[10, 20, 50]"
-        [(nzPageIndex)]="m.page"
-        [(nzPageSize)]="m.pagesize"
-        (nzPageIndexChange)="getData()"
-        (nzPageSizeChange)="getData()"
-      >
-        <thead>
-          <tr>
-            <th
-              nzLeft
-              nzAlign="center"
-              nzWidth="50px"
-              [nzChecked]="m.checked()"
-              [nzIndeterminate]="m.indeterminate()"
-              (nzCheckedChange)="m.setCurrentSelections($event)"
-            ></th>
-            <th><app-title>操作名称</app-title></th>
-            <th><app-title>操作路径</app-title></th>
-            <th nzAlign="center" nzWidth="100px">
-              <app-title>状态</app-title>
-            </th>
-            <th nzRight nzAlign="center" nzWidth="50px">
-              <button nz-button nzType="text" nz-tooltip="操作">
-                <nz-icon nzType="setting" />
-              </button>
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          @for (data of actionTb.data; track data.id) {
-            <tr>
-              <td
-                nzLeft
-                nzAlign="center"
-                [nzChecked]="m.selection().has(data.id)"
-                (nzCheckedChange)="$event ? m.setSelection(data) : m.removeSelection(data.id)"
-              ></td>
-              <td>{{ data.name }}</td>
-              <td>{{ data.code }}</td>
-              <td nzAlign="center">
-                <app-active [appValue]="data.active"></app-active>
-              </td>
-              <td nzRight nzAlign="center">
-                <button nz-button nzType="text" nz-dropdown [nzDropdownMenu]="actions">
-                  <nz-icon nzType="ellipsis" nzTheme="outline"></nz-icon>
-                </button>
-                <nz-dropdown-menu #actions>
-                  <ul nz-menu>
-                    <li nz-menu-item (click)="open(data)">修改</li>
-                    <li nz-menu-divider></li>
-                    <li nz-menu-item nzDanger (click)="delete(data)">删除</li>
-                  </ul>
-                </nz-dropdown-menu>
-              </td>
-            </tr>
-          }
-        </tbody>
-      </nz-table>
-    </nz-card>
+    <router-outlet />
   </div>
 </div>
