feat: 重构资源管理界面，优化布局和样式，更新数据处理逻辑

--- a/src/app/settings/access/resources/actions/actions.html
+++ b/src/app/settings/access/resources/actions/actions.html
@@ -30,7 +30,7 @@
 
 <nz-card style="height: 100%" [nzBordered]="false" [nzTitle]="left" [nzExtra]="right">
   <nz-table
-    #actionTb
+    #tb
     [style.height.%]="100"
     [nzLoading]="m.loading()"
     [nzData]="m.data()"
@@ -67,7 +67,7 @@
       </tr>
     </thead>
     <tbody>
-      @for (data of actionTb.data; track data.id) {
+      @for (data of tb.data; track data.id) {
         <tr>
           <td
             nzLeft
