--- a/src/styles.less
+++ b/src/styles.less
@@ -3,7 +3,24 @@
 
 .inner-layout {
   height: 100%;
-  // padding: 12px 0;
   background: #fafafa;
+}
 
+.litho-split-container {
+  height: 100%;
+  background: #fff;
+  display: flex;
+  flex-direction: row;
+  border: 1px solid #e8e8e8;
+}
+
+.litho-split-list-panel {
+  width: 50%;
+  overflow-y: auto;
+  border-right: 1px solid #e8e8e8;
+}
+
+.litho-split-detail-panel {
+  flex: 1;
+  overflow: auto;
 }
