--- a/src/app/settings/access/resources/resources.html
+++ b/src/app/settings/access/resources/resources.html
@@ -1,5 +1,5 @@
-<div style="height: 100%; background: #fff; display: flex; flex-direction: row; border: 1px solid #e8e8e8">
-  <div style="width: 50%; overflow-y: auto; border-right: 1px solid #e8e8e8">
+<div class="litho-split-container">
+  <div class="litho-split-list-panel">
     <ng-template #left>
       <nz-space nzAlign="center">
         <app-keyword *nzSpaceItem [appModel]="m" (appOnSearch)="getData(true)"></app-keyword>
@@ -24,7 +24,7 @@
 
     <nz-card style="height: 100%" [nzBordered]="false" [nzTitle]="left" [nzExtra]="right">
       <nz-table
-        #resourceTb
+        #tb
         [style.height.%]="100"
         [nzLoading]="m.loading()"
         [nzData]="m.data()"
@@ -61,7 +61,7 @@
           </tr>
         </thead>
         <tbody>
-          @for (data of resourceTb.data; track data.id) {
+          @for (data of tb.data; track data.id) {
             <tr>
               <td
                 nzLeft
@@ -95,7 +95,7 @@
     </nz-card>
   </div>
 
-  <div style="flex: 1; overflow: auto">
+  <div class="litho-split-detail-panel">
     <router-outlet />
   </div>
 </div>
