--- a/src/app/settings/settings.html
+++ b/src/app/settings/settings.html
@@ -33,7 +33,7 @@
               </a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="routes">
+              <a routerLink="views">
                 <nz-icon nzType="layout" />
                 <span>视图控制</span>
               </a>
