feat: 重构路由和分组管理，更新路由链接和表单结构，优化表单验证提示信息

--- a/src/app/settings/access/resources/resources.html
+++ b/src/app/settings/access/resources/resources.html
@@ -70,7 +70,7 @@
                 (nzCheckedChange)="$event ? m.setSelection(data) : m.removeSelection(data.id)"
               ></td>
               <td>
-                <a [routerLink]="['/settings', 'resources', data.id]">{{ data.name }}</a>
+                <a [routerLink]="['/settings', 'access', 'resources', data.id]">{{ data.name }}</a>
               </td>
               <td>{{ data.code }}</td>
               <td nzAlign="center">
