--- a/src/app/settings/access/views/routes/group-form/group-form.html
+++ b/src/app/settings/access/views/routes/group-form/group-form.html
@@ -1,56 +1,8 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (appSubmit)="submit($event)">
-  <nz-row [nzGutter]="[16, 0]">
-    <nz-col [nzSpan]="12">
-      <nz-form-item>
-        <nz-form-label nzRequired>类型</nz-form-label>
-        <nz-form-control nzHasFeedback [nzAutoTips]="tips.type">
-          <nz-select formControlName="type" nzPlaceHolder="请选择路由类型">
-            @for (item of routes.types; track item.value) {
-              <nz-option [nzValue]="item.value" [nzLabel]="item.label"></nz-option>
-            }
-          </nz-select>
-        </nz-form-control>
-      </nz-form-item>
-    </nz-col>
-    <nz-col [nzSpan]="12">
-      <nz-form-item>
-        <nz-form-label nzRequired>名称</nz-form-label>
-        <nz-form-control nzHasFeedback [nzAutoTips]="tips.name">
-          <input nz-input formControlName="name" placeholder="请输入路由名称" />
-        </nz-form-control>
-      </nz-form-item>
-    </nz-col>
-    <nz-col [nzSpan]="12">
-      <nz-form-item>
-        <nz-form-label>分组</nz-form-label>
-        <nz-form-control>
-          <nz-select formControlName="type" nzPlaceHolder="请选择路由分组">
-            @for (item of groupItems(); track item.id) {
-              <nz-option [nzValue]="item.id" [nzLabel]="item.name"></nz-option>
-            }
-          </nz-select>
-        </nz-form-control>
-      </nz-form-item>
-    </nz-col>
-    <nz-col [nzSpan]="12">
-      <nz-form-item>
-        <nz-form-label>图标</nz-form-label>
-        <nz-form-control nzHasFeedback>
-          <nz-input-wrapper>
-            <nz-icon
-              nzInputAddonBefore
-              [nzType]="form.get('icon')?.value === '' ? 'question' : form.get('icon')?.value"
-            />
-            <input nz-input formControlName="icon" placeholder="请输入图标" />
-          </nz-input-wrapper>
-        </nz-form-control>
-      </nz-form-item>
-    </nz-col>
-  </nz-row>
   <nz-form-item>
-    <nz-form-label>链接</nz-form-label>
-    <nz-form-control nzHasFeedback>
-      <input nz-input formControlName="link" placeholder="请输入链接" />
+    <nz-form-label nzRequired>名称</nz-form-label>
+    <nz-form-control nzHasFeedback [nzAutoTips]="tips.name">
+      <input nz-input formControlName="name" placeholder="请输入分组名称" />
     </nz-form-control>
   </nz-form-item>
 
