--- a/src/app/settings/access/views/views.html
+++ b/src/app/settings/access/views/views.html
@@ -71,7 +71,7 @@
                 </button>
               </td>
               <td>
-                <a [routerLink]="['/settings', 'views', data.id]">
+                <a [routerLink]="['/settings', 'access', 'views', data.id]">
                   @if (data.icon) {
                     <nz-icon [nzType]="data.icon"></nz-icon>
                   }
