--- a/src/app/settings/settings.html
+++ b/src/app/settings/settings.html
@@ -5,19 +5,19 @@
         <li nz-menu-group nzTitle="通用">
           <ul>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="orgs">
+              <a routerLink="general/orgs">
                 <nz-icon nzType="apartment" />
                 <span>组织</span>
               </a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="roles">
+              <a routerLink="general/roles">
                 <nz-icon nzType="partition" />
                 <span>权限组</span>
               </a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="users">
+              <a routerLink="general/users">
                 <nz-icon nzType="user" />
                 <span>企业成员</span>
               </a>
@@ -27,19 +27,19 @@
         <li nz-menu-group nzTitle="访问控制">
           <ul>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="resources">
+              <a routerLink="access/resources">
                 <nz-icon nzType="api" />
                 <span>资源控制</span>
               </a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="views">
+              <a routerLink="access/views">
                 <nz-icon nzType="layout" />
                 <span>视图控制</span>
               </a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="permissions">
+              <a routerLink="access/permissions">
                 <nz-icon nzType="switcher" />
                 <span>策略组</span>
               </a>
@@ -49,19 +49,19 @@
         <li nz-menu-group nzTitle="审计日志">
           <ul>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="sessions">
+              <a routerLink="audit/sessions">
                 <nz-icon nzType="rocket" />
                 <span>在线会话</span>
               </a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="login-status">
+              <a routerLink="audit/login-status">
                 <nz-icon nzType="audit" />
                 <span>登录状态</span>
               </a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="behaviors">
+              <a routerLink="audit/behaviors">
                 <nz-icon nzType="file-search" />
                 <span>操作行为</span>
               </a>
