--- a/src/app/settings/access/views/routes/routes.html
+++ b/src/app/settings/access/views/routes/routes.html
@@ -18,10 +18,13 @@
   <nz-tree
     #nzTree
     nzBlockNode
+    nzDraggable
     [nzData]="nodes()"
     [nzShowExpand]="false"
     [nzTreeTemplate]="treeRef"
+    [nzBeforeDrop]="beforeDrop"
     (nzContextMenu)="actions($event, menu)"
+    (nzOnDrop)="regroup($event)"
   >
   </nz-tree>
 </nz-card>
@@ -66,6 +69,8 @@
         <nz-tag nzColor="blue"> 设置 {{ 0 }} 规则 </nz-tag>
       </nz-col>
     </nz-row>
+  } @else {
+    <nz-skeleton></nz-skeleton>
   }
 </ng-template>
 
