--- a/src/app/settings/access/views/views.html
+++ b/src/app/settings/access/views/views.html
@@ -66,7 +66,7 @@
                 (nzCheckedChange)="$event ? m.setSelection(data) : m.removeSelection(data.id)"
               ></td>
               <td nzLeft="50px" nzAlign="center">
-                <button nz-button nzType="text">
+                <button cdkDragHandle nz-button nzType="text">
                   <nz-icon nzType="holder" />
                 </button>
               </td>
