feat: 重构角色管理模块，添加角色权限功能，更新相关组件和路由

--- a/src/app/settings/audit/behaviors/behaviors.html
+++ b/src/app/settings/audit/behaviors/behaviors.html
@@ -1,1 +1,7 @@
-<p>behaviors works!</p>
+<app-box #box>
+  <nz-result nzStatus="500" nzTitle="模块正在开发中" nzSubTitle="该功能正在建设，敬请期待。">
+    <div nz-result-extra>
+      <button nz-button nzType="primary">返回</button>
+    </div>
+  </nz-result>
+</app-box>
