feat: 更新用户界面，优化角色和用户管理，重构表单和环境配置

--- a/src/app/__layout/layout.html
+++ b/src/app/__layout/layout.html
@@ -36,7 +36,7 @@
 
       <div class="header-right">
         <div class="user-info" nz-dropdown [nzDropdownMenu]="userMenu" nzTrigger="click">
-          <nz-avatar nzSize="small">
+          <nz-avatar nzSize="small" nzShape="square">
             <nz-icon nzType="user" />
           </nz-avatar>
           <span class="username">Kain</span>
