feat: 更新权限组管理，重构表单以包含组织选择，添加排序功能和相关提示信息

--- a/src/app/settings/general/roles/form/form.html
+++ b/src/app/settings/general/roles/form/form.html
@@ -1,14 +1,24 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (appSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired>角色名称</nz-form-label>
+    <nz-form-label nzRequired>权限组名称</nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.name">
-      <input nz-input formControlName="name" placeholder="请输入角色名称" />
+      <input nz-input formControlName="name" placeholder="请输入权限组名称" />
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label nzRequired>组织名称</nz-form-label>
+    <nz-form-control nzHasFeedback [nzAutoTips]="tips.org_id">
+      <nz-select formControlName="org_id" nzPlaceHolder="请输入组织名称">
+        @for (item of orgItems(); track item.id) {
+          <nz-option [nzValue]="item.id" [nzLabel]="item.name" />
+        }
+      </nz-select>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
     <nz-form-label>描述</nz-form-label>
     <nz-form-control>
-      <textarea nz-input rows="3" formControlName="description" placeholder="请输入角色描述"></textarea>
+      <textarea nz-input rows="3" formControlName="description" placeholder="请输入描述"></textarea>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
